# nationstates-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
ns_mcp/: __init__.py  auth.py  client.py  exceptions.py  parsers.py  ratelimit.py  server.py
ns_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ns_mcp/tools/: __init__.py  cards.py  nation.py  region.py  telegrams.py  utility.py  verification.py  wa.py  world.py
tests/: __init__.py  test_client.py  test_parsers.py  test_server.py
tests/fixtures/: api_version.xml  cards_card.xml  cards_deck.xml  command_execute_ok.xml  command_prepare.xml  nation_issue_detail.xml  nation_issues_list.xml  nation_private_notices.xml  nation_public.xml  nation_submit_ok.xml  region_complete.xml  verify_ok.xml  wa_resolution.xml  world_census.xml  world_happenings.xml
