[project]
name = "ns-mcp"
version = "0.1.0"
description = "NationStates MCP server — exposes the full NationStates API as MCP tools"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.28.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[project.scripts]
ns-mcp = "ns_mcp.server:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
